# small-project

./: .gitignore  CMakeLists.txt  README.md  admin_dashboard.cpp  admin_dashboard.h  api_bridge.cpp  auth_service.cpp  backend.h  book_dao.cpp  book_manager_widget.cpp  book_manager_widget.h  book_service.cpp  borrow_panel.cpp  borrow_panel.h  borrow_record_dao.cpp  borrow_service.cpp  category_dao.cpp  category_tree.cpp  credit_engine.cpp  csv_exporter.cpp  csv_exporter.h  database_manager.cpp  entity_ctors.cpp  fine_calculator.cpp  frontend.h  json_exporter.cpp  json_exporter.h  log_dao.cpp  log_service.cpp  login_dialog.cpp  login_dialog.h  login_dialog.ui  loginwindow.cpp  loginwindow.h  main.cpp  main_window.cpp  main_window.h  mock_generator.cpp  models.h  notification_widget.cpp  (+31 more)
resources/: resources.qrc  style.qss
small-project/: README.md  admin_dashboard.cpp  auth_service.cpp  book_dao.cpp  book_manager_widget.cpp  borrow_record_dao.cpp  borrow_service.cpp  category_dao.cpp  category_tree.cpp  credit_engine.cpp  frontend.h  log_service.cpp  overdue_scanner.cpp  recommend_widget.cpp  reservation_dao.cpp  reservation_queue.cpp  reservation_service.cpp  reservation_widget.cpp  status_code.cpp  test_credit_engine.cpp  user_manager_widget.cpp
src/: main.cpp  models.h  utils.cpp  utils.h
src/bridge/: api_bridge.cpp  api_bridge.h
src/dao/: book_dao.cpp  book_dao.h  borrow_record_dao.cpp  borrow_record_dao.h  category_dao.cpp  category_dao.h  database_manager.cpp  database_manager.h  log_dao.cpp  log_dao.h  reservation_dao.cpp  reservation_dao.h  user_dao.cpp  user_dao.h
src/engine/: category_tree.cpp  category_tree.h  credit_engine.cpp  credit_engine.h  fine_calculator.cpp  fine_calculator.h  recommend_engine.cpp  recommend_engine.h  reservation_queue.cpp  reservation_queue.h  search_index.cpp  search_index.h
src/service/: auth_service.cpp  auth_service.h  book_service.cpp  book_service.h  borrow_service.cpp  borrow_service.h  log_service.cpp  log_service.h  overdue_scanner.cpp  overdue_scanner.h  reservation_service.cpp  reservation_service.h
src/ui/: book_tooltip.cpp  book_tooltip.h  login_dialog.cpp  login_dialog.h  main_window.cpp  main_window.h  notification_widget.cpp  notification_widget.h
src/ui/admin/: admin_dashboard.cpp  admin_dashboard.h  book_manager_widget.cpp  book_manager_widget.h  statistics_widget.cpp  statistics_widget.h  user_manager_widget.cpp  user_manager_widget.h
src/ui/reader/: borrow_panel.cpp  borrow_panel.h  reader_main_widget.cpp  reader_main_widget.h  recommend_widget.cpp  recommend_widget.h  reservation_widget.cpp  reservation_widget.h  search_widget.cpp  search_widget.h
tools/: csv_exporter.cpp  csv_exporter.h  json_exporter.cpp  json_exporter.h  mock_generator.cpp  mock_generator.h  test_runner.cpp
